tests/errors/error_type_divide.nimmy
# Error: Cannot divide incompatible types
let x = "hello" / 2